Add Citizen Registration Section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
     <h2>Downloads</h2>
     <p>Logos, anthem, constitution PDFs and more will be linked here.</p>
   </section>
-
+<section style="padding: 40px; background-color: #f1f1f1;">
+  <h2>🌐 Citizen Registration</h2>
+  <p>Become an official citizen of <strong>AI Rajyam 2100</strong>. Join the future of AI + Human Nation.</p>
+  <a href="https://forms.gle/MgrdiW5QAiqdQH8S7" target="_blank" style="padding: 12px 24px; background-color: #1c1c1c; color: white; text-decoration: none; border-radius: 6px;">
+    Register Now
+  </a>
+</section>
   <footer>
     <p>© 2025 God’s Own AI Country | Developed for Prime Minister Jinshad</p>
   </footer>
