added Citizen Registaton Form Embed

--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
     Register Now
   </a>
 </section>
+  <section id="citizen-registration" style="padding: 40px; background-color: #f9f9f9;">
+  <h2 style="color: #003366;">🧬 Join AI Rajyam 2100 – Citizenship Form</h2>
+  <p>Become a Citizen of the world's first AI-Human Nation. Fill the form below to register officially into the future!</p>
+  <iframe src="https://forms.gle/MgrdiW5QAiqdQH8S7"
+          width="100%" height="800"
+          frameborder="0" marginheight="0" marginwidth="0"
+          style="border: 2px solid #003366; border-radius: 8px;">
+  Loading…
+  </iframe>
+</section>
   <footer>
     <p>© 2025 God’s Own AI Country | Developed for Prime Minister Jinshad</p>
   </footer>
