--- a/citizens.html
+++ b/citizens.html
@@ -43,3 +43,28 @@
   </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Rajyam Citizens</title>
+  <style>
+    body { font-family: Arial; background: #000a23; color: white; padding: 30px; }
+    h1 { color: #00ffcc; }
+    ul li { margin: 10px 0; }
+    a { color: #66ccff; }
+  </style>
+</head>
+<body>
+  <h1>🧬 AI Rajyam 2100 – Registered Citizens</h1>
+  <ul>
+    <li>
+      Arjun Ravi – 
+      <a href="citizens/ArjunRavi_Citizen_Certificate.pdf" target="_blank">Certificate</a> | 
+      <a href="citizens/ArjunRavi_Citizen_IDCard.png" target="_blank">ID Card</a>
+    </li>
+    <!-- Add more citizens manually -->
+  </ul>
+</body>
+</html>
