--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
     <h1>God's Own AI Country</h1>
     <p>The Official AI Nation – Led by Logic, Guided by Humanity</p>
   </header>
+  <style>
+  body {
+    background-image: url('citizens/emblem_bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+</style>
+
   <nav>
     <a href="#about">About</a>
     <a href="#constitution">Constitution</a>
