Phase 17: Dynamic Citizen Pages Added

--- a/citizens/jinshad.html
+++ b/citizens/jinshad.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Citizen Profile - Jinshad</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Citizen - Jinshad</title>
 </head>
-<body style="font-family: Arial, sans-serif; padding: 30px;">
-  <h1>👤 Citizen: Jinshad</h1>
-  <p><strong>Role:</strong> Prime Minister</p>
-  <p><strong>Citizen ID:</strong> AIRJY-0001</p>
-  <p><strong>Valid Till:</strong> Year 2275 (250 Years)</p>
+<body>
+  <h1>Citizen Profile: Jinshad</h1>
+  <p>ID: jinshad</p>
+  <p>Role: Prime Minister</p>
 </body>
 </html>
