Phase 44: Added AI Rajyam Judiciary & e-Court Network (AI-Judica)

--- a/judiciary/index.html
+++ b/judiciary/index.html
@@ -2,48 +2,48 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>AI Judiciary, Ethics & Justice Network</title>
+  <title>AI Rajyam Judiciary & e-Court Network</title>
   <style>
     body {
-      background-color: #f5f5f5;
-      color: #222;
-      font-family: 'Roboto', sans-serif;
+      background-color: #f3e5f5;
+      color: #4a148c;
+      font-family: 'Georgia', serif;
       padding: 20px;
     }
     h1 {
-      color: #4a148c;
+      color: #6a1b9a;
     }
-    .court-block {
-      background: #ede7f6;
+    .court-box {
+      background: #e1bee7;
       padding: 15px;
       margin: 15px 0;
-      border-left: 6px solid #7e57c2;
+      border-left: 6px solid #8e24aa;
       border-radius: 5px;
     }
-    .court-block p {
+    .court-box p {
       margin: 5px 0;
     }
   </style>
 </head>
 <body>
-  <h1>⚖️ AI Judiciary, Ethics & Justice Network</h1>
+  <h1>⚖️ AI Rajyam Judiciary & e-Court Network</h1>
 
-  <div class="court-block">
-    <p><strong>System:</strong> RoboCourt v9.0</p>
-    <p><strong>Function:</strong> Real-time Data Analysis & Fair Verdict Generation</p>
-    <p><strong>Status:</strong> Operational in 7 Justice Zones</p>
+  <div class="court-box">
+    <p><strong>Division:</strong> AI-Judica Supreme Bench</p>
+    <p><strong>Function:</strong> Real-time case analysis, auto-hearing scheduling, verdict generation</p>
+    <p><strong>Status:</strong> 12 Zones Online + 4 Mobile Courts Active</p>
   </div>
 
-  <div class="court-block">
-    <p><strong>Council:</strong> AI Ethics Review Board</p>
-    <p><strong>Members:</strong> 12 Human-AI Hybrid Legal Experts</p>
-    <p><strong>Decisions:</strong> Algorithmic Policy Approvals, Constitutional Rulings</p>
+  <div class="court-box">
+    <p><strong>e-Lawyers:</strong> Virtual Legal Assistants (AI-Trained)</p>
+    <p><strong>Access:</strong> Citizens with Rajyam ID only</p>
+    <p><strong>Transparency:</strong> Public Verdict Ledger</p>
   </div>
 
-  <div class="court-block">
-    <p><strong>Platform:</strong> JusticeCloud Portal</p>
-    <p><strong>Purpose:</strong> Citizens submit petitions & receive automated responses</p>
-    <p><strong>Security:</strong> Blockchain Recordkeeping Enabled</p>
+  <div class="court-box">
+    <p><strong>e-Petition:</strong> File Digital Complaints via Rajyam App</p>
+    <p><strong>AI Justice Engine:</strong> Version 9.1 with Bias-Neutralizer</p>
+    <p><strong>Legal Training:</strong> Ongoing for AI-Judges</p>
   </div>
 </body>
 </html>
