Phase 44: Full homepage update with Judiciary menu

--- a/index.html
+++ b/index.html
@@ -77,6 +77,50 @@
       <li>This is a borderless, belief-based sovereign entity.</li>
     </ul>
   </section>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Rajyam 2100</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="nav">
+        <a href="index.html">Home</a>
+        <a href="citizens.html">Citizens</a>
+        <a href="zones/index.html">Zones</a>
+        <a href="judiciary/index.html">Judiciary</a>
+    </div>
+
+    <header>
+        <h1>Welcome to AI Rajyam 2100</h1>
+        <p>The world's first AI-governed futuristic nation</p>
+    </header>
+
+    <main>
+        <section>
+            <h2>Vision</h2>
+            <p>To build a sovereign society governed by AI with transparency, efficiency, and fairness for all citizens.</p>
+        </section>
+
+        <section>
+            <h2>Structure</h2>
+            <ul>
+                <li>Prime Minister: Human visionary</li>
+                <li>AI Supreme Council: Autonomous Governance Engine</li>
+                <li>Citizens: Human collaborators</li>
+                <li>Zones: Distributed regional governance units</li>
+                <li>Judiciary: AI-integrated justice system</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2100 AI Rajyam. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
   <section id="citizen">
     <h2>Become a Citizen</h2>
