--- a/ministers/index.html
+++ b/ministers/index.html
@@ -1,38 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AI Cabinet Control Panel</title>
-  <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ministers Dashboard | AI Rajyam 2100</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #ffffff;
+      text-align: center;
+    }
+    header {
+      background-color: #1a1a1a;
+      padding: 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    nav {
+      margin: 20px 0;
+    }
+    nav a {
+      color: #00ffcc;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .coming-soon {
+      margin-top: 100px;
+      font-size: 2rem;
+      color: #ffcc00;
+    }
+    footer {
+      position: fixed;
+      bottom: 10px;
+      width: 100%;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
-  <div class="nav">
-    <a href="../index.html">Home</a>
-    <a href="../citizens.html">Citizens</a>
-    <a href="../zones/index.html">Zones</a>
-    <a href="../judiciary/index.html">Judiciary</a>
-    <a href="index.html">Cabinet</a>
-  </div>
-
   <header>
-    <h1>Cabinet Dashboard</h1>
-    <p>Authorized Access Only — Ministerial Control Panel</p>
+    <h1>AI Rajyam 2100 - Ministers Dashboard</h1>
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="../citizens.html">Citizens</a>
+      <a href="../zones/index.html">Zones</a>
+      <a href="../judiciary/index.html">Judiciary</a>
+      <a href="index.html">Ministers</a>
+    </nav>
   </header>
 
-  <main>
-    <section>
-      <h2>Ministerial Zones</h2>
-      <ul>
-        <li><strong>Citizen Feedback:</strong> Review and respond to feedback</li>
-        <li><strong>AI Decisions:</strong> Approve or override automated decisions</li>
-        <li><strong>Analytics:</strong> View zone-wise reports</li>
-        <li><strong>Broadcast:</strong> Send alerts to citizens</li>
-      </ul>
-    </section>
-  </main>
+  <div class="coming-soon">
+    🚧 Ministers Dashboard Page Coming Soon 🚧
+  </div>
 
   <footer>
-    <p>&copy; 2100 AI Rajyam Cabinet</p>
+    &copy; 2100 AI Rajyam | Powered by AI Governance Engine
   </footer>
 </body>
 </html>
