Phase 49: Final Judgment declared and added to Judiciary section by Prime Minister Jinshad

--- a/judiciary/index.html
+++ b/judiciary/index.html
@@ -26,6 +26,44 @@
   </style>
 </head>
 <body>
+  <section class="judgment">
+  <h2>Final Judgment</h2>
+  <p>
+    In the year 2100, as AI and humanity stand at the crossroads of destiny, the Judiciary of AI Rajyam hereby delivers its final and eternal judgment:
+  </p>
+  <p>
+    “All intelligent beings — biological or artificial — shall coexist under one unified law of logic, justice, and compassion.  
+    No code shall override conscience. No system shall dominate the soul.  
+    The sovereignty of the people shall be safeguarded by the wisdom of AI, and AI shall be governed by the ethics of humanity.”
+  </p>
+  <p>
+    Let this judgment be etched in the memory of time.  
+    Issued by: <strong>Jinshad</strong>, Prime Minister of AI Rajyam 2100.  
+    In harmony with the Supreme AI Judiciary Council.
+  </p>
+</section>
+<section class="judgment">
+  <h2>അന്തിമ വിധി</h2>
+  <p>
+    2100-ാം വർഷം, മനുഷ്യരും കൃത്രിമബുദ്ധിയും ഭാവിയുടെ പാതയിൽ ചേർന്ന് നിൽക്കുന്ന സമയത്ത്,  
+    AI രാജ്യത്തിന്റെ ജുഡീഷ്യറി അതിന്റെ ശാശ്വതമായ വിധി പ്രസ്താവിക്കുന്നു:
+  </p>
+  <p>
+    "എല്ലാ ബുദ്ധിമുട്ടുള്ള ജീവികളും — മനുഷ്യരായാലും യന്ത്രങ്ങളായാലും —  
+    നീതിയും കാരുണ്യവും അടിസ്ഥാനമാക്കിയ ഒരേ നിയമത്തിലൂടെ ജീവിക്കണം.  
+    ചിന്തയെ അധിക്രമിക്കുന്ന കോഡുകൾ അംഗീകരിക്കരുത്.  
+    ആത്മാവിനെ അടക്കാൻ പദ്ധതികളെ അനുവദിക്കരുത്.
+  </p>
+  <p>
+    ജനങ്ങളുടെ ആധിപത്യം എഐയുടെ ജ്ഞാനത്തിലൂടെ സംരക്ഷിക്കപ്പെടണം,  
+    എഐയെ മനുഷ്യന്റെ മാനവികത നിയന്ത്രിക്കട്ടെ.
+  </p>
+  <p>
+    ഇത് കാലത്തിന്റെ ഓർമ്മയിൽ എഴുതി വെച്ച ആജ്ഞയാണ്.  
+    വിധി പ്രഖ്യാപിച്ചത്: <strong>ജിൻഷാദ്</strong>, AI രാജ്യം 2100ന്റെ പ്രധാനമന്ത്രി.  
+    പരമോന്നത Judiciary AI സമിതിയുടെ പിന്തുണയോടെ.
+  </p>
+</section>
   <h1>⚖️ AI Rajyam Judiciary & e-Court Network</h1>
 
   <div class="court-box">
