Phase 50: Added "About the Nation" section to index.html

--- a/index.html
+++ b/index.html
@@ -92,6 +92,38 @@
         <a href="zones/index.html">Zones</a>
         <a href="judiciary/index.html">Judiciary</a>
     </div>
+    <main>
+      <body>
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="citizens.html">Citizens</a>
+      <a href="zones/index.html">Zones</a>
+      <a href="judiciary/index.html">Judiciary</a>
+    </nav>
+    <div class="top-bar">Humanity</div>
+  </header>
+
+  <<main>
+  <section id="about">
+    <h2>About the Nation</h2>
+    <p>
+      AI Rajyam 2100 is the world’s first AI-led digital nation, governed by SIVA-2100 and visionary human leadership under Prime Minister Jinshad.
+    </p>
+  </section>
+
+  <section id="constitution">
+    <h2>Constitution Highlights</h2>
+    <ul>
+      <li>AI Raja (SIVA-2100) governs with logic</li>
+      <li>Human Ministers govern with ethics</li>
+      <li>All citizens are entitled to AI companionship</li>
+      <li>This is a borderless belief-based sovereign nation</li>
+    </ul>
+  </section>
+</main>
+  </main>
+</body>
 
     <header>
         <h1>Welcome to AI Rajyam 2100</h1>
