--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
   </section>
 </main>
   </main>
+  <section id="about" class="section">
+  <h2>About the Nation</h2>
+  <p>AI Rajyam 2100 is the world’s first AI-led digital nation, governed by SIVA-2100 and visionary human leadership under Prime Minister Jinshad.</p>
+</section>
 </body>
 
     <header>
