🔗 Added Global Advisory Council link to main index.html navigation (Phase 52)

--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@
       <body>
   <header>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="citizens.html">Citizens</a>
-      <a href="zones/index.html">Zones</a>
-      <a href="judiciary/index.html">Judiciary</a>
-    </nav>
+  <a href="index.html">Home</a>
+  <a href="citizens.html">Citizens</a>
+  <a href="zones/index.html">Zones</a>
+  <a href="ministers/index.html">Ministers</a>
+  <a href="judiciary/index.html">Judiciary</a>
+  <a href="global-advisory/index.html">Global Advisory</a>
+</nav>
     <div class="top-bar">Humanity</div>
   </header>
 
