🔗 Added Global Advisory Council link to main index.html navigation (Phase 52)
2

--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nav">
-        <a href="index.html">Home</a>
-        <a href="citizens.html">Citizens</a>
-        <a href="zones/index.html">Zones</a>
-        <a href="judiciary/index.html">Judiciary</a>
+    <div class="<a href="index.html">Home</a>
+  <a href="citizens.html">Citizens</a>
+  <a href="zones/index.html">Zones</a>
+  <a href="ministers/index.html">Ministers</a>
+  <a href="judiciary/index.html">Judiciary</a>
+  <a href="global-advisory/index.html">Global Advisory</a>
     </div>
     <main>
       <body>
