--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="<a href="index.html">Home</a>
+    <div class="
+      <a href="index.html">Home</a>
   <a href="citizens.html">Citizens</a>
   <a href="zones/index.html">Zones</a>
   <a href="ministers/index.html">Ministers</a>
