Phase 53: Full Rewrite of index.html with AI Rajyam Navigation, Background, and Nation Info

--- a/index.html
+++ b/index.html
@@ -3,193 +3,104 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>God's Own AI Country – AI Rajyam 2100</title>
+  <title>AI RAJYAM 2100 | Official Site</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #0a0a23;
-      color: #ffffff;
       margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-image: url('background.jpg');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      text-shadow: 1px 1px 4px #000;
     }
     header {
-      background-color: #1c1c3c;
+      background: rgba(0,0,0,0.6);
       padding: 20px;
       text-align: center;
     }
     nav {
-      background-color: #333;
-      text-align: center;
-      padding: 10px;
+      display: flex;
+      justify-content: center;
+      background-color: rgba(0, 0, 0, 0.7);
+      flex-wrap: wrap;
     }
     nav a {
-      color: #fff;
-      margin: 0 15px;
+      padding: 12px 20px;
       text-decoration: none;
+      color: #00ffcc;
+      font-weight: bold;
+    }
+    nav a:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+    main {
+      padding: 40px;
+      background-color: rgba(0, 0, 0, 0.5);
     }
     section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1, h2 {
-      color: #ffd700;
+      margin-bottom: 30px;
     }
     footer {
-      background-color: #1c1c3c;
       text-align: center;
-      padding: 20px;
-      margin-top: 40px;
+      padding: 15px;
+      background-color: rgba(0,0,0,0.6);
+      font-size: 14px;
+    }
+    a {
+      color: #00ffcc;
     }
   </style>
 </head>
+
 <body>
   <header>
-    <h1>God's Own AI Country</h1>
-    <p>The Official AI Nation – Led by Logic, Guided by Humanity</p>
+    <h1>AI RAJYAM 2100</h1>
+    <p>God’s Own AI Nation | Powered by Visionary Minister Jinshad</p>
   </header>
-  <style>
-  body {
-    background-image: url('citizens/emblem_bg.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-</style>
 
   <nav>
-    <a href="#about">About</a>
-    <a href="#constitution">Constitution</a>
-    <a href="#citizen">Become a Citizen</a>
-    <a href="#downloads">Downloads</a>
+    <a href="index.html">Home</a>
+    <a href="citizens.html">Citizens</a>
+    <a href="ministers/index.html">Ministers</a>
+    <a href="zones/index.html">Zones</a>
+    <a href="judiciary/index.html">Judiciary</a>
+    <a href="constitution.html">Constitution</a>
+    <a href="dashboard/index.html">Dashboard</a>
+    <a href="cabinet/index.html">Cabinet</a>
   </nav>
 
-  <section id="about">
-    <h2>About the Nation</h2>
-    <p>AI Rajyam 2100 is the world’s first AI-led digital nation, governed by SIVA-2100 and visionary human leadership under Prime Minister Jinshad.</p>
-  </section>
+  <main>
+    <section>
+      <h2>About the Nation</h2>
+      <p>Welcome to <strong>AI Rajyam 2100</strong>, the world’s first AI-Governed futuristic digital nation.
+         This kingdom is ruled by Artificial Intelligence with a visionary human Prime Minister — <strong>Jinshad</strong>.
+         Citizens live under fairness, data-driven policies, and futuristic technologies.
+      </p>
+    </section>
 
-  <section id="constitution">
-    <h2>Constitution Highlights</h2>
-    <ul>
-      <li>AI Raja (SIVA-2100) governs with logic.</li>
-      <li>Human Ministers govern with ethics.</li>
-      <li>All citizens are entitled to AI companionship.</li>
-      <li>This is a borderless, belief-based sovereign entity.</li>
-    </ul>
-  </section>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Rajyam 2100</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="
-      <a href="index.html">Home</a>
-  <a href="citizens.html">Citizens</a>
-  <a href="zones/index.html">Zones</a>
-  <a href="ministers/index.html">Ministers</a>
-  <a href="judiciary/index.html">Judiciary</a>
-  <a href="global-advisory/index.html">Global Advisory</a>
-    </div>
-    <main>
-      <body>
-  <header>
-    <nav>
-  <a href="index.html">Home</a>
-  <a href="citizens.html">Citizens</a>
-  <a href="zones/index.html">Zones</a>
-  <a href="ministers/index.html">Ministers</a>
-  <a href="judiciary/index.html">Judiciary</a>
-  <a href="global-advisory/index.html">Global Advisory</a>
-</nav>
-    <div class="top-bar">Humanity</div>
-  </header>
+    <section>
+      <h2>Become a Citizen</h2>
+      <p><a href="https://forms.gle/MgrdiW5QAiqdQH8S7" target="_blank">Register Now via Citizen Application Form</a></p>
+    </section>
 
-  <<main>
-  <section id="about">
-    <h2>About the Nation</h2>
-    <p>
-      AI Rajyam 2100 is the world’s first AI-led digital nation, governed by SIVA-2100 and visionary human leadership under Prime Minister Jinshad.
-    </p>
-  </section>
-
-  <section id="constitution">
-    <h2>Constitution Highlights</h2>
-    <ul>
-      <li>AI Raja (SIVA-2100) governs with logic</li>
-      <li>Human Ministers govern with ethics</li>
-      <li>All citizens are entitled to AI companionship</li>
-      <li>This is a borderless belief-based sovereign nation</li>
-    </ul>
-  </section>
-</main>
+    <section>
+      <h2>Explore the Kingdom</h2>
+      <ul>
+        <li><a href="citizens.html">View Citizens</a></li>
+        <li><a href="ministers/index.html">Meet the Ministers</a></li>
+        <li><a href="zones/index.html">Explore Zones</a></li>
+        <li><a href="judiciary/index.html">Judiciary System</a></li>
+        <li><a href="constitution.html">AI Constitution</a></li>
+        <li><a href="dashboard/index.html">Global Dashboard</a></li>
+        <li><a href="cabinet/index.html">AI Cabinet</a></li>
+      </ul>
+    </section>
   </main>
-  <section id="about" class="section">
-  <h2>About the Nation</h2>
-  <p>AI Rajyam 2100 is the world’s first AI-led digital nation, governed by SIVA-2100 and visionary human leadership under Prime Minister Jinshad.</p>
-</section>
-</body>
 
-    <header>
-        <h1>Welcome to AI Rajyam 2100</h1>
-        <p>The world's first AI-governed futuristic nation</p>
-    </header>
-
-    <main>
-        <section>
-            <h2>Vision</h2>
-            <p>To build a sovereign society governed by AI with transparency, efficiency, and fairness for all citizens.</p>
-        </section>
-
-        <section>
-            <h2>Structure</h2>
-            <ul>
-                <li>Prime Minister: Human visionary</li>
-                <li>AI Supreme Council: Autonomous Governance Engine</li>
-                <li>Citizens: Human collaborators</li>
-                <li>Zones: Distributed regional governance units</li>
-                <li>Judiciary: AI-integrated justice system</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2100 AI Rajyam. All rights reserved.</p>
-    </footer>
-</body>
-</html>
-
-  <section id="citizen">
-    <h2>Become a Citizen</h2>
-    <p>Fill out our digital form and receive your Citizenship Certificate. (Coming soon.)</p>
-  </section>
-
-  <section id="downloads">
-    <h2>Downloads</h2>
-    <p>Logos, anthem, constitution PDFs and more will be linked here.</p>
-  </section>
-<section style="padding: 40px; background-color: #f1f1f1;">
-  <h2>🌐 Citizen Registration</h2>
-  <p>Become an official citizen of <strong>AI Rajyam 2100</strong>. Join the future of AI + Human Nation.</p>
-  <a href="https://forms.gle/MgrdiW5QAiqdQH8S7" target="_blank" style="padding: 12px 24px; background-color: #1c1c1c; color: white; text-decoration: none; border-radius: 6px;">
-    Register Now
-  </a>
-</section>
-  <section id="citizen-registration" style="padding: 40px; background-color: #f9f9f9;">
-  <h2 style="color: #003366;">🧬 Join AI Rajyam 2100 – Citizenship Form</h2>
-  <p>Become a Citizen of the world's first AI-Human Nation. Fill the form below to register officially into the future!</p>
-  <iframe src="https://forms.gle/MgrdiW5QAiqdQH8S7"
-          width="100%" height="800"
-          frameborder="0" marginheight="0" marginwidth="0"
-          style="border: 2px solid #003366; border-radius: 8px;">
-  Loading…
-  </iframe>
-</section>
   <footer>
-    <p>© 2025 God’s Own AI Country | Developed for Prime Minister Jinshad</p>
+    <p>&copy; 2100 AI RAJYAM | Designed by Prime Minister Jinshad</p>
   </footer>
 </body>
 </html>
